static/style.css
/* ... */
#record-menu {
    height: unset;
    width: unset;
    right: 145px;
    bottom: 110px;
}

#record-menu:after {
    right: 7px;
}

#record-menu:before {
    right: 15px;
}

#record-menu > div {
    margin: 0 12px;
    border-bottom: unset;
}

#record-menu > div > i {
    font-size: 30px;
    cursor: pointer;
}

#record-menu > div > i[disabled] {
    opacity: 0.4;
    color: lightgrey;
    cursor: not-allowed;
}

#play-button {
    color: limegreen;
}

#pause-button {
    color: grey;
}

#stop-button, #record-button, #restart-button {
    color: red;
}

#send-button {
    color: blue;
}


/****** CHAT AREA ********/

#chat {
    -webkit-box-flex: 1;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    overflow-y: scroll;
    z-index: 20;
    height: 100%;
}

#chat > div {
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 5px 0;
    position: relative;
}

#chat > div:first-of-type {
    padding-top: 120px;
}

#chat > div > :not(:nth-child(2)) {
    white-space: nowrap;
    width: 70px;
}

#chat > div > div:last-child {
    font-family: monospace;
    padding-right: 5px;
    text-align: right;
    line-height: 24px;
    font-size: 11px;
}

#chat > div > :first-child {
    margin: 0 10px;
    text-align: center;
}

#chat > div > div:first-child {
    background-color: #DDD;
    border-radius: 99px;
    position: relative;
    overflow: hidden;
    height: 70px;
    border-right: 2px solid rgba(0, 0, 0, 0.5);
    border-bottom: 2px solid rgba(0, 0, 0, 0.5);
    display: flex;
}

#chat > div > div:first-child > img {
    margin: auto;
    display: none;
}

#chat > div > div:first-child > img:not(:first-child), ul > li > div > div:first-child > div > img {
    top: -100%;
    left: -100%;
    right: -100%;
    bottom: -100%;
}

#chat > div > :nth-child(2) {
    -webkit-box-flex: 1;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    overflow: hidden;
    word-break: keep-all;
}

#chat > div > div > div {
    padding: 5px;
}

#chat > div > :nth-child(2) > div:not(:first-child) {
    color: #333;
}

#chat > div > div > img {
    width: auto;
    max-height: 30vh;
    max-width: 100%;
}

#chat > .msg > :nth-child(3) {
    color: #999;
}

#userlist {
    width: 100%;
    height: 100%;
    border-left: 2px solid #BBB;
    overflow-x: hidden;
    overflow-y: scroll;
    background: #f9f9f9;
    padding-bottom: 10px;
}


/****** USER LIST ELEMENTS ******/

#userlist > li {
    background-position: left 4px bottom 6px;
    background-repeat: no-repeat;
    padding-left: 40px;
    line-height: 36px;
    width: 180px;
    height: 36px;
    display: flex;
    justify-content: space-between;
    cursor: pointer;
}

#userlist > li > i {
    margin: 1px 0;
    padding: 6px 5px;
    color: #333;
}

a {
    color: #06A;
    text-decoration: none;
}

audio + a {
    margin-left: 5px;
}

a:hover, li > i:hover, footer i:hover, #window input:hover, #window label:hover, select:hover {
    cursor: pointer;
}

#userlist > li:hover > div {
    display: block;
}

#userlist > li > div {
    z-index: 25;
    color: #333;
    display: none;
    position: absolute;
    top: 57px;
    right: 222px;
    width: 400px;
    font-size: 11px;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 35px, #f9f9f9 35px, #f9f9f9 100%);
    display: none !important;
}

#userlist > li > div > div:first-child {
    font-size: 20px;
    line-height: 30px;
    padding-bottom: 10px;
    text-align: center;
}

#userlist > li > div > div:first-child > div {
    background-color: #DDD;
    border-radius: 99px;
    overflow: hidden;
    height: 70px;
    width: 70px;
    position: relative;
    display: inline-block;
    border-right: 2px solid rgba(0, 0, 0, 0.5);
    border-bottom: 2px solid rgba(0, 0, 0, 0.5);
}

#userlist > li > div > div:first-child > div > img {
    position: absolute;
    display: block;
    margin: auto;
}

#userlist > li > div > div:last-child {
    padding: 5px 10px;
    line-height: 25px;
    border: 2px solid #BBB;
    border-top: 0;
}

#userlist > li > div > div:last-child > i {
    position: relative;
    top: 3px;
    font-size: 15px;
    margin-right: 5px;
}

.backlog {
    -webkit-filter: blur(1px);
    -moz-filter: blur(1px);
    -o-filter: blur(1px);
    -ms-filter: blur(1px);
    filter: blur(1px);
}

.log, .log > div > div {
    color: #3C3;
    border-color: #3C3;
}

.part, .part > div > div {
    color: #1AC;
    border-color: #1AC;
}

.kick, .kick > div > div {
    color: #F33;
    border-color: #F33;
}

.me > div > div {
    color: inherit;
}

.log, .part, .me, .kick {
    text-align: center;
}

.bot > :nth-child(2) {
    font-style: italic;
}

.spoiler, .spoiler * {
    -webkit-filter: blur(3px);
    -moz-filter: blur(3px);
    -o-filter: blur(3px);
    -ms-filter: blur(3px);
    filter: blur(3px);
}

.spoiler:hover, .spoiler:hover * {
    -webkit-filter: blur(0px);
    -moz-filter: blur(0px);
    -o-filter: blur(0px);
    -ms-filter: blur(0px);
    filter: blur(0px);
}

.greentext {
    color: #792;
    font-family: monospace;
}

.pinktext {
    color: #F6F;
}

#close:hover {
    background: #F33 !important;
}

#underlay {
    position: fixed;
    opacity: 0.025;
    z-index: 10;
    top: 50px;
    left: 0;
    right: 200px;
    bottom: 50px;
    background-position: center center;
    background-repeat: no-repeat;
    filter: invert(50%) brightness(0%);
}

.pulse {
    -webkit-animation: pulse 200ms forwards;
    animation: pulse 200ms forwards;
}

@-webkit-keyframes pulse {
    50% {
        opacity: 0.1;
    }
    100% {
        opacity: 0.025;
    }
}

@keyframes pulse {
    50% {
        opacity: 0.1;
    }
    100% {
        opacity: 0.025;
    }
}
/* ... */

